  Bugfixes:
    - Fixed a bug that caused the GUI button to not be added when a mod change occures
    - Fixed the "/resetSpaceX" command to properly reset the launch progress
    - Fixed Bob Mods compatibility when robo ports are disabled. Will use personal roboport instead
    - Fixed closing Log window as well as main window when SpaceX button is pressed
    - Fixed correct days/hours in Log
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Changes:
    - Minor corrections to the technology pre-requisites when using Bobs mods courtesy of KiwiHawk.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Changes:
    - Version 1.1 compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Changes:
    - Correction to assembly robot icon size
---------------------------------------------------------------------------------------------------
Version: 0.5.1
  Changes:
    - Russian language translation update
---------------------------------------------------------------------------------------------------
Version: 0.5.0
  Changes:
    - Version 0.18 compatibility
---------------------------------------------------------------------------------------------------
Version: 0.4.4
  Changes:
    - Changes dependencies to accomodate Bob;s new Personnal Equipment Mod.  You now need Personnal Equipment.  You now do not need Warfare.  If personnal equipment mod is missing, then the Bob;s mods recipes will not be activated.
---------------------------------------------------------------------------------------------------
Version: 0.4.3
  Changes: