@@ -27,6 +27,7 @@ Date: 01.04.2023
     - Fixed Bob Mods compatibility when robo ports are disabled. Will use personal roboport instead
     - Fixed closing Log window as well as main window when SpaceX button is pressed
     - Fixed correct days/hours in Log
+    - Fixed technology unlock requirements
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
   Changes:
